    adds a new "Language:" header that caused a failure when unapplying
    the patch (Closes: #602633).
  * Fill out the same "Language:" header in debian/po/*.po.
  * Explicitly state source format 1.0 in debian/source/format.
  * Upgrade Standards-Version to 3.9.2, no changes needed.
  * Update lintian override for Lintian 2.5.
  * Update Vcs-* fields in debian/control, switching to collab-maint.

 -- Sven Joachim <svenjoac@gmx.de>  Fri, 04 Nov 2011 18:25:45 +0100

backup-manager (0.7.9-3) unstable; urgency=low

  * Remove /etc/backup-manager.conf.ucf-old on purge.
  * Associate /etc/backup-manager.conf with backup-manager via ucfr.
  * Bump ucf dependency to (>= 2.009), since that version introduced the
    ucfr command.
  * Update Brazilian Portuguese debconf translation, thanks to
    Eder L. Marques (Closes: #574147).

 -- Sven Joachim <svenjoac@gmx.de>  Wed, 17 Mar 2010 17:10:47 +0100

backup-manager (0.7.9-2) unstable; urgency=low

  * The "debconf is not a registry" release.
  * Respect manual moving/removal/installation of our cron script
    (Closes: #567477).
  * Source /etc/backup-manager.conf from the config script if possible
    to correct possibly outdated debconf values (Closes: #569587).
  * Do not install our possibly very expensive cron script by default
    (Closes: #518707), and mention in README.Debian how to enable it.
    Existing installations should not be affected.
  * Allow tar.lz (LZMA compressed tarballs) as archive filetype via debconf.
    Support for this filetype had been introduced in 0.7.5, but could
    only be enabled by manually editing /etc/backup-manager.conf.
  * Bump ucf dependency to (>= 0.28), since that version introduced the
    --debconf-ok option.
  * Upgrade Standards-Version to 3.8.4, no changes needed.

 -- Sven Joachim <svenjoac@gmx.de>  Sun, 14 Feb 2010 10:49:49 +0100

backup-manager (0.7.9-1) unstable; urgency=high

  * New upstream release.